crates/keron-lang/tests/corpus/errors/check/struct_shorthand_unbound.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unknown variable `port`
  --> 4:33
  |
4 | val h: Host = Host { name: "a", port }
  |                                 ^^^^
